--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ nav a {
     margin-right: auto;
     width: 280px;
     position: relative;
-    top: 90px;
+    top: 130px;
     left: 130px;
 }
     div{
@@ -29,8 +29,8 @@ nav a {
 form{
     text-align: center;
     position:relative;
-    top: 100px;
-    right: 230px;
+    top: 140px;
+    right: 500px;
 
 }
 input{
@@ -51,10 +51,11 @@ nav button{
 
 }
 div button{
+    text-align: center;
     width: 170px;
     position: relative;
-    top: 150px;
-    left: 350px;
+    top: 200px;
+    left: 300px;
 }
 body{
     background:#202124;
@@ -62,18 +63,18 @@ body{
     color: #bdc1c6;
 }
 .lucky{
-    position: absolute;
+   /* position: absolute;
     top: 270px;
-    left: 550px;
+    left: 550px;*/
 
 }
 .search{
-    position: absolute;
+   /* position: absolute;
     top: 270px;
-    left: 370px;
+    left: 370px;*/
 }
 #languages {
     position: relative;
-    top: 200px;
+    top: 220px;
     left: 300px;
 }
